Clean up code; Improve tests

--- a/tasks/create_volumes.yml
+++ b/tasks/create_volumes.yml
@@ -6,10 +6,11 @@
     owner: root
     group: root
     mode: 0755
-  when: not(
-            (data_volume is undefined)
-            or
-            (data_volume is none)
-            or
-            (data_volume | trim == '')
-          )
+  when: >
+    not(
+      (data_volume is undefined)
+      or
+      (data_volume is none)
+      or
+      (data_volume | trim == '')
+    )
