--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,16 @@
 ---
 image_name: nextcloud
-image_version: 13.0.0
+image_version: 18.0
 
 interface: 0.0.0.0
 http_port: 80
 
 data_volume: ''
+
+www_data_uid: '033'
+
+service_name: nextcloud
+upgrade_service_name: "{{service_name}}-upgrade"
+indices_service_name: "{{service_name}}-indices"
+
+docker_container_name: "{{service_name}}.service"
