--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,22 +7,16 @@
 
 - include: create_volumes.yml
 
-- name: Create systemd unit file
-  template: src=nextcloud.systemd.j2 dest=/etc/systemd/system/nextcloud.service owner=root group=root mode=0550
-  register: nextcloud_service
-
-- name: Reload systemd
-  command: systemctl daemon-reload
-  when: nextcloud_service.changed
+- include: create-systemd-services.yml
 
 - name: Restart service (on changes)
   service:
-    name: nextcloud
+    name: "{{service_name}}"
     state: restarted
     enabled: yes
   when: nextcloud_service.changed or dockerimage.changed
 
 - name: Start service (if not started)
   service:
-    name: nextcloud
+    name: "{{service_name}}"
     state: started
