Make data volume mandatory

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
+- include: check-parameters.yml
+
 - name: pull image
   docker_image:
     name: "{{image_name}}:{{image_version}}"
     source: pull
   register: dockerimage
 
-- include: create_volumes.yml
+- include: create-volumes.yml
 
 - include: create-systemd-services.yml
 
