--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,13 +2,16 @@
 galaxy_info:
   author: flandiGT
   description: Installation role for nextcloud docker container
-  min_ansible_version: 2.1
+  min_ansible_version: 2.9
+  license: MIT
   platforms:
-  - name: Ubuntu
-    versions:
-    - xenial
-  categories:
-  - development
-  - packaging
-  - system
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
+        - focal
+  galaxy_tags:
+    - development
+    - packaging
+    - system
 dependencies: []
