--- a/tasks/create-systemd-services.yml
+++ b/tasks/create-systemd-services.yml
@@ -2,13 +2,20 @@
 - name: Create systemd unit file for nextcloud
   template:
     src: nextcloud.systemd.j2
-    dest: "/etc/systemd/system/{{service_name}}.service"
+    dest: "/etc/systemd/system/{{ service_name }}.service"
     owner: root
     group: root
     mode: 0644
   register: nextcloud_service
+  notify:
+    - Reload systemd
+    - Restart nextcloud service
 
-- name: Reload systemd
-  command: systemctl daemon-reload
-  when: >
-    nextcloud_service.changed
+- name: Enable nextcloud service
+  service:
+    name: "{{ service_name }}"
+    enabled: true
+  register: nextcloud_service
+  changed_when: nextcloud_service.changed
+    or nextcloud_service.status.SubState != 'running'
+  notify: Start nextcloud service
