--- a/tasks/generate-one-secret.yml
+++ b/tasks/generate-one-secret.yml
@@ -1,9 +1,9 @@
 ---
 - name: Use openssl to generate secret
-  shell: "openssl rand -hex {{secret_size}}"
+  command: "openssl rand -hex {{ secret_size }}"
   changed_when: false
   register: generated_openssl_secret
 
 - name: Set new secret fact
   set_fact:
-    generated_secret: "{{generated_openssl_secret.stdout}}"
+    generated_secret: "{{ generated_openssl_secret.stdout }}"
