--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,12 +1,12 @@
 ---
 - hosts: test_machine
-  become: yes
+  become: true
 
   roles:
     - role: install-docker
       storage_driver: overlay2
-      cleanup_enabled: no
-      install_pip_docker: yes
+      cleanup_enabled: false
+      install_pip_docker: true
 
     - install-docker-compose
 
