--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,27 +1,11 @@
 ---
-- name: Reload systemd
-  systemd:
-    daemon_reload: true
-  when: not (
-    molecule_docker_environment is defined
-    and molecule_docker_environment | bool
-    )
-
-- name: Start nextcloud service
-  service:
-    name: "{{ service_name }}"
-    state: started
-  register: nextcloud_service_start
-
 - name: Restart nextcloud service
-  service:
+  systemd:
     name: "{{ service_name }}"
     state: restarted
+    enabled: true
+    daemon_reload: true
   when: not (
-    nextcloud_service_start is defined
-    and nextcloud_service_start.changed
-    )
-    and not (
     molecule_docker_environment is defined
     and molecule_docker_environment | bool
     )
