--- a/tasks/generate-one-secret.yml
+++ b/tasks/generate-one-secret.yml
@@ -1,6 +1,6 @@
 ---
 - name: Use openssl to generate secret
-  command: "openssl rand -hex {{ secret_size }}"
+  command: "openssl rand -hex {{ nextcloud_db_secret_size }}"
   changed_when: false
   register: generated_openssl_secret
 
