--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,33 +1,29 @@
 ---
-image_name: nextcloud
-image_version: latest
+nextcloud_image_name: nextcloud
+nextcloud_image_version: latest
 
-interface: 0.0.0.0
-http_port: 80
+nextcloud_interface: 0.0.0.0
+nextcloud_http_port: 80
 
-www_volume: ''
-database_volume: ''
+nextcloud_www_volume: ''
+nextcloud_database_volume: ''
 
-secret_size: 16
+nextcloud_db_secret_size: 16
 
-service_name: nextcloud
+nextcloud_service_name: nextcloud
 
-www_data_uid: '033'
-database_uid: '999'
+nextcloud_www_data_uid: '033'
+nextcloud_database_uid: '999'
 
-working_directory: /opt/nextcloud
-docker_working_directory: "{{working_directory}}/docker"
+nextcloud_working_directory: /opt/nextcloud
+nextcloud_docker_working_directory: "{{nextcloud_working_directory}}/docker"
 
-docker_container_name: "{{service_name}}.service"
+nextcloud_db_secret_file_path:
+  "{{nextcloud_docker_working_directory}}/postgres_password.txt"
+nextcloud_docker_compose_path:
+  "{{nextcloud_docker_working_directory}}/docker-compose.yml"
 
-
-postgres_password_file_path:
-  "{{docker_working_directory}}/postgres_password.txt"
-docker_compose_path: "{{docker_working_directory}}/docker-compose.yml"
-docker_compose_convert_filecache_bigint_path:
-  "{{docker_working_directory}}/docker-compose-convert-filecache-bigint.yml"
-
-db_image_name: postgres
-db_image_version: latest
+nextcloud_db_image_name: postgres
+nextcloud_db_image_version: latest
 
 docker_compose_executable: /usr/local/bin/docker-compose
