--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Restart nextcloud service
   systemd:
-    name: "{{ service_name }}"
+    name: "{{ nextcloud_service_name }}"
     state: restarted
     enabled: true
     daemon_reload: true
