--- a/tasks/create-systemd-services.yml
+++ b/tasks/create-systemd-services.yml
@@ -2,7 +2,7 @@
 - name: Create systemd unit file for nextcloud
   template:
     src: nextcloud.systemd.j2
-    dest: "/etc/systemd/system/{{ service_name }}.service"
+    dest: "/etc/systemd/system/{{ nextcloud_service_name }}.service"
     owner: root
     group: root
     mode: 0644
