--- a/tasks/create-volumes.yml
+++ b/tasks/create-volumes.yml
@@ -1,16 +1,16 @@
 ---
 - name: create nextcloud www volume
   file:
-    path: "{{ www_volume }}"
+    path: "{{ nextcloud_www_volume }}"
     state: directory
-    owner: "{{ www_data_uid }}"
+    owner: "{{ nextcloud_www_data_uid }}"
     group: root
     mode: 0750
 
 - name: create database volume
   file:
-    path: "{{ database_volume }}"
+    path: "{{ nextcloud_database_volume }}"
     state: directory
-    owner: "{{ database_uid }}"
+    owner: "{{ nextcloud_database_uid }}"
     group: root
     mode: 0700
