--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,9 @@ nextcloud_http_port: 80
 nextcloud_www_volume: ''
 nextcloud_database_volume: ''
 
+nextcloud_data_volume: ''
+nextcloud_custom_apps_volume: ''
+
 nextcloud_db_secret_size: 16
 
 nextcloud_service_name: nextcloud
