--- a/molecule/shared/converge.yml
+++ b/molecule/shared/converge.yml
@@ -5,11 +5,13 @@
 
   roles:
     - role: ansible-nextcloud
-      nextcloud_image_version: latest
-      nextcloud_db_image_version: latest
+      nextcloud_image_version: '18.0.6'
+      nextcloud_db_image_version: '12.3'
       nextcloud_http_port: 10081
       nextcloud_www_volume: /srv/nextcloud/www
       nextcloud_database_volume: /srv/nextcloud/database
       nextcloud_data_volume: /srv/nextcloud/data
       nextcloud_custom_apps_volume: /srv/nextcloud/custom_apps
       nextcloud_db_secret_size: 32
+      nextcloud_additional_apt_packages:
+        - smbclient
