Run job to add missing columns to database when stopping nextcloud

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -61,6 +61,7 @@ provisioner:
   playbooks:
     prepare: ../shared/prepare.yml
     converge: ../shared/converge.yml
+    verify: ../shared/verify.yml
   inventory:
     group_vars:
       docker:
