--- a/tasks/generate-postgres-password.yml
+++ b/tasks/generate-postgres-password.yml
@@ -5,3 +5,6 @@
   copy:
     dest: "{{ nextcloud_db_secret_file_path }}"
     content: "{{ generated_secret }}"
+    owner: root
+    group: root
+    mode: 0640
