--- a/molecule/shared/prepare.yml
+++ b/molecule/shared/prepare.yml
@@ -5,9 +5,9 @@
 
   roles:
     - role: install-docker
-      storage_driver: overlay2
-      cleanup_enabled: false
-      install_pip_docker: true
+      docker_storage_driver: overlay2
+      docker_cleanup_enabled: false
+      docker_install_pip_package: true
 
     - role: install-docker-compose
       version: 1.25.5
