--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,11 +5,11 @@ nextcloud_image_version: latest
 nextcloud_interface: 0.0.0.0
 nextcloud_http_port: 80
 
-nextcloud_www_volume: ''
-nextcloud_database_volume: ''
+nextcloud_www_volume: /srv/nextcloud/www
+nextcloud_database_volume: /srv/nextcloud/database
 
-nextcloud_data_volume: ''
-nextcloud_custom_apps_volume: ''
+nextcloud_data_volume: /srv/nextcloud/data
+nextcloud_custom_apps_volume: /srv/nextcloud/custom_apps
 
 nextcloud_db_secret_size: 16
 
