--- a/molecule/all-parameters/verify.yml
+++ b/molecule/all-parameters/verify.yml
@@ -91,55 +91,55 @@
           Requires=docker.service
 
           [Service]
-          ExecStartPre=-/usr/local/bin/docker-compose \
+          ExecStartPre=-/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             down \
             --remove-orphans
 
-          ExecStartPre=/usr/local/bin/docker-compose \
+          ExecStartPre=/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             build
 
-          ExecStart=/usr/local/bin/docker-compose \
+          ExecStart=/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             up \
             --build
 
-          ExecStop=-/usr/local/bin/docker-compose \
+          ExecStop=-/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             exec -T -u 033 app \
             php occ db:add-missing-columns
 
-          ExecStop=-/usr/local/bin/docker-compose \
+          ExecStop=-/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             exec -T -u 033 app \
             php occ db:add-missing-primary-keys
 
-          ExecStop=-/usr/local/bin/docker-compose \
+          ExecStop=-/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             exec -T -u 033 app \
             php occ db:add-missing-indices
 
-          ExecStop=-/usr/local/bin/docker-compose \
+          ExecStop=-/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
             exec -T -u 033 app \
             php occ db:convert-filecache-bigint --no-interaction
 
-          ExecStop=/usr/local/bin/docker-compose \
+          ExecStop=/usr/bin/docker compose \
             --project-directory /opt/nextcloud/docker \
             --file /opt/nextcloud/docker/docker-compose.yml \
             --project-name nextcloud \
@@ -207,8 +207,11 @@
       register: netcat_10080
       retries: 300
       delay: 1
-      until: netcat_10080 is defined
-        and netcat_10080.rc == 0
+      until: netcat_10080 is defined and (
+        netcat_10080.rc == 0
+        or netcat_10080.rc == 2) # nc command not found
+      failed_when: netcat_10080 is defined
+        and netcat_10080.rc != 0
       when: not (
         molecule_docker_environment is defined
         and molecule_docker_environment | bool
