--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,15 +11,43 @@ driver:
   name: docker
 
 platforms:
-  - name: ansible-nextcloud-focal
-    image: docker.io/borisskert/python3:focal
+  - name: ansible-nextcloud-noble
+    image: docker.io/borisskert/python3:noble
+    pull: true
     pre_build_image: true
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
     groups:
       - docker
-  - name: ansible-nextcloud-buster
-    image: docker.io/borisskert/python3:buster
+  - name: ansible-nextcloud-jammy
+    image: docker.io/borisskert/python3:jammy
+    pull: true
+    pre_build_image: true
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock'
+    groups:
+      - docker
+  - name: ansible-nextcloud-focal
+    image: docker.io/borisskert/python3:focal
+    pull: true
+    pre_build_image: true
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock'
+    groups:
+      - docker
+
+  - name: ansible-nextcloud-bookworm
+    image: docker.io/borisskert/python3:bookworm
+    pull: true
+    pre_build_image: true
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock'
+    groups:
+      - docker
+      - debian
+  - name: ansible-nextcloud-bullseye
+    image: docker.io/borisskert/python3:bullseye
+    pull: true
     pre_build_image: true
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
