--- a/molecule/vagrant/molecule.yml
+++ b/molecule/vagrant/molecule.yml
@@ -3,6 +3,7 @@ dependency:
   name: galaxy
   options:
     role-file: ./molecule/default/requirements.yml
+    force: true
 
 driver:
   name: vagrant
@@ -10,18 +11,18 @@ driver:
     name: libvirt
 
 platforms:
-  - name: ansible-nextcloud-xenial
-    box: generic/ubuntu1604
-  - name: ansible-nextcloud-bionic
-    box: generic/ubuntu1804
+  - name: ansible-nextcloud-noble
+    box: cloud-image/ubuntu-24.04
+  - name: ansible-nextcloud-jammy
+    box: cloud-image/ubuntu-22.04
   - name: ansible-nextcloud-focal
-    box: generic/ubuntu2004
-  - name: ansible-nextcloud-stretch
-    box: generic/debian9
+    box: cloud-image/ubuntu-20.04
+  - name: ansible-nextcloud-bookworm
+    box: cloud-image/debian-12
     groups:
       - debian
-  - name: ansible-nextcloud-buster
-    box: generic/debian10
+  - name: ansible-nextcloud-bullseye
+    box: cloud-image/debian-11
     groups:
       - debian
 
